# arap

./: .gitignore  CMakeLists.shared  CMakeLists.txt  Makefile  README.md  build.sh  collect_data.m  experiment.sh  main.cc
cmake/: FindANTTWEAKBAR.cmake  FindCHOLMOD.cmake  FindEMBREE.cmake  FindGLEW.cmake  FindGLFW.cmake  FindLIBIGL.cmake  FindTRIANGLE.cmake
demo/: CMakeLists.txt  adaptadmmfixedsolver.cc  adaptadmmfixedsolver.h  adaptadmmfreesolver.cc  adaptadmmfreesolver.h  admmfixedsolver.cc  admmfixedsolver.h  admmfreesolver.cc  admmfreesolver.h  admmsolver.cc  admmsolver.h  arapbenchmarksolver.cc  arapbenchmarksolver.h  arapsolver.cc  arapsolver.h  energy.cc  energy.h  main.cc  solver.cc  solver.h
license/: EIGEN_COPYING.BSD  EIGEN_COPYING.GPL  EIGEN_COPYING.LGPL  EIGEN_COPYING.MINPACK  EIGEN_COPYING.MPL2  EIGEN_COPYING.README
matlab/: arap.m  bfgs.m  comparap.m  comparapb.m  comparapv.m  compe.m  compedge.m  compweight.m  dpolar.m  dr.m  dvi.m  dvj.m  initpath.m  initv.m  minir.m  miniv.m  minivleft.m  minivright.m  neighbor.m  polar.m  readdmat.m  readoff.m  showmodel.m  skew.m  skewmatrix.m  skewvector.m  testd.m  testdarap.m  testdpolar.m  testinit.m  testskew.m  tricot.m  writedmat.m  writeoff.m
tools/: makefile  rotate_bar.cc  stretch_bar.cc
